--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
    <!DOCTYPE html>
    <head>
-       <title> Hello World! </title>
+       <title> Até o verão terminar </title>
    </head>
    <body>
-<h1>HELLO WORLD!</h1>
-<H5>este é o primeiro site que estou criando</H5>
-   </body>
+      <h1>Até o verão terminar</h1>
+      <img src="imagens/imagem.jpg" height="350" width="250">
+      <a href="https://www.google,com"> Clique aqui para abrir o google
+      <H5>Filha de uma mãe problemática e um pai ausente, Beyah precisou aprender a se virar sozinha desde pequena.</H5>
+      <p>Sua vida foi trilhada com muitas decepeções.<br> 
+         Mas ela está prestes a mudar a sua sorte graças a si mesma, e a mais ninguém, por conta da bolsa de estudos que ganhou para estudar em uma boa universidade.</p>
+         <ol>
+            <li> Ela foi passar o resto do verão na casa de praia do pai que mal conhece</li>
+            <li> O plano de Beyah é se manter quase invisível até poder ir para a faculdade.</li>
+            <li> O vizinho da casa ao lado torna tudo muito mais complicado</li>
+         </ol>
+         <ul>
+            <li> Ela viveu uma vida sem dinheiro ou amor  </li>
+            <li> Beyah e Samson resolvem se dar uma chance mas apenas até o verão terminar </li>
+            <li> O vizinho da casa ao lado torna tudo muito mais complicado </li>
+         </ul>
+   </body
