--- a/index.html
+++ b/index.html
@@ -19,4 +19,4 @@
             <li> Beyah e Samson resolvem se dar uma chance mas apenas até o verão terminar </li>
             <li> O vizinho da casa ao lado torna tudo muito mais complicado </li>
          </ul>
-   </body
+      </body>
