--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
    <head>
        <title> Até o verão terminar </title>
        <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
-      <h1>Até o verão terminar</h1>
+      <i>Até o verão terminar</i>
       <div id="imagem">
          <img src="imagens/imagem.jpg" height="350" width="250">
       </div>
@@ -44,4 +44,13 @@
                   <td> Henrique </td>
                </tr>
          </table>
+      
+         <br>
+
+      <iframe width="300" height="150" src="https://www.youtube.com/embed/8yg2lN48mx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      
       </body>
+      <p> 
+         <time>16:30</time>
+      </p>
+<cite>Eu sei o que é o amor, porque passei minha vida inteira sabendo o que não é</cite>
